[package]
name = "psql-ledger-rst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.1"
log = "0.4"
config = "0.13"
deadpool-postgres = { version = "0.12", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
envy = "0.4.2"
chrono = "0.4.34"
derive_more = "0.99.0"
clap = "3.0"
